<resources>
    <string name="app_name">KeepIt</string>
    <string name="about">About</string>
    <string name="home_name">Home</string>
    <string name="todays_name">Today</string>
    <string name="meetings_name">Meetings</string>
    <string name="birthday_name">Birthdays</string>
    <string name="notes_name">Notes</string>
    <string name="about_text">KeepIt is your personal agenda that keeps everything together and helps
        you with your busy life.\nYou can enjoy your life because KeepIt is keeping you organized.\n\nThe
        paid version keeps you far from ads.\n\nEnjoy!</string>
    <string name="paid_version">Paid version</string>
    <string name="cancel">Cancel</string>
    <string name="add_today">Add for today\'s</string>
    <string name="add_meeting">Add meeting</string>
    <string name="add_birthday">Add birthday</string>
    <string name="add_note">Add note</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_message">Delete this event?</string>
    <string name="delete_today_dialog_message">Delete all day\'s events?</string>
    <string name="delete_birthdays_dialog_message">Delete all birthdays?</string>
    <string name="delete_meetings_dialog_message">Delete all meetings?</string>
    <string name="delete_notes_dialog_message">Delete all notes?</string>
    <string name="unsaved_changes_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="add">Add</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date_title">Date</string>
    <string name="time_title">Time</string>
    <string name="add_time">Add time</string>
    <string name="person_title">Name</string>
    <string name="empty_for_today">This day is only about you. \n Enjoy your free time!</string>
    <string name="add_person_name">Add her/his name</string>
    <string name="title_of_the_meeting">Meeting\'s name</string>
    <string name="add_title">Add title</string>
    <string name="meetings_location">Show location</string>
    <string name="add_location">Add location</string>
    <string name="date_pattern">DD/MM/YYYY</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="checked_image">Checked Icon</string>
    <string name="age">Age</string>
    <string name="send_message">Send message</string>
    <string name="title_of_the_note">Note title</string>
    <string name="deadline_title">Deadline</string>
    <string name="edit_meeting">Edit Meeting</string>
    <string name="edit_birthday">Edit Birthday</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_text_note">Add note</string>
    <string name="time_pattern">08:00</string>
    <string name="empty_list">Your list is empty.</string>
    <string name="exception_date_format">Problem formatting input date</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ads">"ca-app-pub-3940256099942544/6300978111"</string>
    <string name="event_type">Event Type</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="person_name">Person Name</string>
</resources>
