<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_from_notes"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_from_notes"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home_n"
        android:title="@string/home_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_todays_n"
        android:title="@string/todays_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_meetings_n"
        android:title="@string/meetings_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_birthdays_n"
        android:title="@string/birthday_name"
        app:showAsAction="never" />


</menu>