<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/action_delete_from_todays"
    android:title="@string/delete"
    android:icon="@drawable/ic_delete"
    app:showAsAction="always"/>
    <item
        android:id="@+id/action_add_from_todays"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"/>
        <item
            android:id="@+id/action_home_t"
            android:title="@string/home_name"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_meetings_t"
            android:title="@string/meetings_name"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_birthdays_t"
            android:title="@string/birthday_name"
            app:showAsAction="never"/>
    <item
        android:id="@+id/action_notes_t"
        android:title="@string/notes_name"
        app:showAsAction="never"/>


</menu>