<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatchStyle">

    <ImageView
        style="@style/MatchMatchStyle"
        android:alpha="0.2"
        android:contentDescription="@string/meetings_name"
        android:src="@drawable/people" />

    <LinearLayout
        style="@style/MatchMatchStyle"
        android:orientation="vertical">

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/title_of_the_meeting" />

            <EditText
                android:id="@+id/meetings_name_title"
                style="@style/WrapWrapStyle"
                android:hint="@string/add_title"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/date_title" />

            <TextView
                android:id="@+id/picker_meeting_date"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/date_pattern" />


        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/time_title" />

            <TextView
                android:id="@+id/picker_meeting_time"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/time_pattern" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/person_title" />

            <EditText
                android:id="@+id/meeting_person_name"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/add_person_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_map"
                style="@style/WrapWrapStyle"
                android:drawableEnd="@drawable/ic_location"
                android:drawablePadding="@dimen/margin_eight"
                android:text="@string/meetings_location" />

            <EditText
                android:id="@+id/meeting_location"
                style="@style/WrapWrapStyle"
                android:hint="@string/add_location"
                android:inputType="textPostalAddress"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>