<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/WMatchHWrapStyle"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/checked_TV"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:contentDescription="@string/checked_image"
        tools:src="@drawable/ic_check_box" />

    <LinearLayout
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_type_TV"
            style="@style/WrapWrapStyle"
            android:textSize="@dimen/text_sixteen"
            tools:text="@string/event_type" />

        <TextView
            android:id="@+id/title_TV"
            style="@style/WrapWrapStyle"
            android:textSize="@dimen/text_sixteen"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/date_TV"
            style="@style/WrapWrapStyle"
            android:textSize="@dimen/text_sixteen"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/person_name_TV"
            style="@style/WrapWrapStyle"
            android:textSize="@dimen/text_sixteen"
            tools:text="@string/person_name" />
    </LinearLayout>

    <ImageView
        android:id="@+id/edit_event"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1"
        android:contentDescription="@string/notes_name"
        android:src="@drawable/ic_edit" />

</LinearLayout>
