<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatchStyle">

    <ImageView
        style="@style/MatchMatchStyle"
        android:alpha="0.2"
        android:contentDescription="@string/notes_name"
        android:src="@drawable/note_icon" />

    <LinearLayout
        style="@style/MatchMatchStyle"
        android:orientation="vertical">

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/title_of_the_note" />

            <EditText
                android:id="@+id/note_name_title"
                style="@style/WrapWrapStyle"
                android:hint="@string/add_title"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/deadline_title" />

            <TextView
                android:id="@+id/picker_note_deadline"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/date_pattern" />

        </LinearLayout>

        <LinearLayout
            style="@style/WMatchHWrapStyle"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/notes_name" />

            <EditText
                android:id="@+id/note_text"
                style="@style/WMatchHWrapStyle"
                android:hint="@string/add_text_note"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>