<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatchStyle">

    <ImageView
        style="@style/MatchMatchStyle"
        android:alpha="0.2"
        android:contentDescription="@string/birthday_name"
        android:src="@drawable/birthday" />

    <LinearLayout
        style="@style/MatchMatchStyle"
        android:layout_marginTop="@dimen/margin"
        android:orientation="vertical">

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/person_title" />

            <EditText
                android:id="@+id/birthday_person_name"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/add_person_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/birthday_name" />

            <TextView
                android:id="@+id/picker_birth_date"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/date_pattern" />


        </LinearLayout>

        <LinearLayout
            style="@style/WrapWrapStyle"
            android:layout_margin="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                style="@style/WrapWrapStyle"
                android:text="@string/age" />

            <TextView
                android:id="@+id/person_age"
                style="@style/WrapWrapStyle"
                android:layout_marginStart="@dimen/margin"
                android:hint="@string/age" />

        </LinearLayout>

        <TextView
            android:id="@+id/send_message_tv"
            style="@style/WrapWrapStyle"
            android:layout_margin="@dimen/margin"
            android:drawableEnd="@drawable/ic_mail"
            android:drawablePadding="@dimen/margin"
            android:text="@string/send_message" />

    </LinearLayout>

</FrameLayout>