<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatchStyle"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".activities.AddTodayActivity">

    <Button
        android:id="@+id/meeting_button"
        style="@style/AddBttnsStyle"
        android:drawableBottom="@drawable/people"
        android:text="@string/add_meeting"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/birthday_button"
        style="@style/AddBttnsStyle"
        android:drawableBottom="@drawable/birthday"
        android:text="@string/add_birthday"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/note_button"
        style="@style/AddBttnsStyle"
        android:drawableBottom="@drawable/note_icon"
        android:text="@string/add_note"
        tools:targetApi="lollipop" />

</LinearLayout>