<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/today_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:alpha="0.7"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/today_icon"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/today_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:text="@string/todays_name"
        android:textSize="16sp"
        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/meetings_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/people"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

        <TextView
            android:id="@+id/meetings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:text="Meetings"
            android:textSize="16sp"
            android:textStyle="bold"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/birthday_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:alpha="0.7"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/birthday"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <TextView
        android:id="@+id/birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:text="Birthdays"
        android:textSize="16sp"
        android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/notes_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:alpha="0.7"
         app:srcCompat="@drawable/note_icon"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/notes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:text="@string/notes_name"
        android:textSize="16sp"
        android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>